--- a/_config.yml
+++ b/_config.yml
@@ -33,6 +33,7 @@ plugins:
 minima:
     skin: dark
 show_excerpts: true
+excerpt_separator: <!--more-->
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
