--- a/_config.yml
+++ b/_config.yml
@@ -34,6 +34,7 @@ minima:
     skin: dark
 show_excerpts: true
 excerpt_separator: <!--more-->
+paginate: 5
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
