--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ email: brendan@brendanalbano.com
 description: >- # this means to ignore newlines until "baseurl:"
   A Weblog
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://brendanalbano.com" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://brendanalbano.com" # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: jekyllrb
 github_username:  balbano
 
